Refactor: full refactor applying SOLID principles
- Extracted business logic from PriceService into PriceSelector (SRP)
- Refactored JpaPriceRepository to filter and sort directly in the database (performance)
- Reorganized layers: domain, infrastructure, application, and DTOs
- Introduced PriceResponseDto and PriceMapper to decouple REST output from the domain model
- Refactored PriceController with proper error handling (404, 400) and use of ResponseEntity
- Added unit tests for PriceService and integration tests with MockMvc for PriceController
- Improved test method naming and scenario coverage for better readability